<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS571_2012fall_hw9</string>
    <string name="request">Request!</string>
    <string name="hello">Hello World!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Post to Facebook</string>
    <string name="delete">Delete Post</string>
    <string name="title">Movie Search</string>
    <string name="title_hint">Search the movie title</string>
    <string name="type_prompt">Select a movie type</string>
    <string name="search">Search</string>

    <string-array name="types_array">
        <item>All Types</item>
        <item>Feature</item>
        <item>TV Series</item>
        <item>Video Game</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_movie_list_view">Movie List</string>
    <string name="title_activity_movie_array_adapter">MovieArrayAdapter</string>
    <string name="rating">Rating:</string>
    <string name="text">Would you like to post the movie information on Facebook?</string>
    <string name="name">Name:</string>
    <string name="year">Year:</string>
    <string name="director">Director:</string>

</resources>