<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageDialog"
        android:paddingLeft="5dp"
        android:layout_width="50dp"
        android:layout_height="75dp" />

    <TextView
        android:id="@+id/titleDialog"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/yearDialog"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />
    
    <TextView
        android:id="@+id/directorDialog"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/director" />

    <TextView
        android:id="@+id/ratingDialog"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating" />
    
    <TextView
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text" />

    <Button
        android:id="@+id/postDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />

</LinearLayout>