<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/black"
	android:gravity="center_horizontal">
	
	<TextView 
	    android:id="@+id/searchTextView" 
        android:textColor="@drawable/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
		/>
	
	<EditText 
	    android:id="@+id/titleEditText"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint">
	    <requestFocus />
	</EditText>	
	
	<Spinner
	    android:id="@+id/typeSpinner"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/type_prompt" />
	
	<Button 
	    android:id="@+id/searchButton"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />
	
	<TextView 
	    android:id="@+id/txt"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content" />	
	


</LinearLayout>